<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/view_result_header"
        android:orientation="vertical"
        android:padding="@dimen/base_space">

    <TextView
            android:id="@+id/view_result_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/base_space"
            android:fontFamily="@font/raleway_semi_bold"
            android:gravity="center|end"
            android:maxLines="1"
            android:padding="@dimen/base_space"
            android:textSize="@dimen/headline_4_text_size"
            tools:text="123+332" />
</LinearLayout>